<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="min_edit_gain">-12</string>
    <string name="max_edit_gain">12</string>
    <string name="powerOn">Power On</string>
    <string name="powerOff">Power Off</string>
    <string name="dolbyDigitalPlus">Dolby Digital Plus</string>
    <string name="intelligent_equalizer">Intelligent Equalizer</string>
    <string name="surround_virtualizer">Surround Virtualizer</string>
    <string name="dialogue_enhancer">Dialogue Enhancer</string>
    <string name="volume_leveler">Volume Leveler</string>
    <string name="copyright">Dolby and the double-D symbol are registered trademarks of Dolby Laboratories. © 2014 Dolby Laboratories All rights reserved.</string>
    <string name="movie">Movie</string>
    <string name="music">Music</string>
    <string name="game">Game</string>
    <string name="voice">Voice</string>
    <string name="preset_1">Custom 1</string>
    <string name="preset_2">Custom 2</string>
    <string name="bright">Bright</string>
    <string name="open">Open</string>
    <string name="rich">Rich</string>
    <string name="focused">Focused</string>
    <string name="off">OFF</string>
    <string name="custom">Manual</string>
    <string name="db36">36dB</string>
    <string name="db24">24dB</string>
    <string name="db12">12dB</string>
    <string name="db0">0dB</string>
    <string name="dbn12">-12dB</string>
    <string name="graphical_equalizer">Graphic Equalizer</string>
    <string name="app_name">Dolby Atmos</string>
    <string name="colon">:</string>
    <string name="minimize_content_description">Minimize button</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="instore_app_name">DsInStoreDemoApp</string>
    <string name="instore_menu_text">Play Demo</string>
    <string name="replay">Replay</string>
    <string name="default_text" />
    <string name="stop">Stop</string>
    <string name="exit">Exit</string>
    <string name="explore_dolby_atmos">Explore Dolby Atmos</string>
    <string name="dolby_explore_atmos_remark">Dolby Atmos creates an amazing mobile headphone experience with multidimensional sound that flows above and around you.</string>
    <string name="dolby_explore_atmos_learn_more">Learn more</string>
    <string name="experience_dolby_enhanced_apps">Experience Dolby enhanced apps</string>
    <string name="experience_dolby_remark">Immerse yourself with applications and games that leverage Dolby Audio. Whether you use headphones or built-in speakers, dialogue is more clear and volume levels are well balanced, pulling you deeper into the experience.</string>
    <string name="access_dolby_enhanced_app">Access Dolby enhanced apps now!</string>
    <string name="dolby_atmos_mark">Dolby Atmos</string>
    <string name="title_activity_dlb_in_store_demo_remark">DlbInStoreDemoRemark</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dolby_atmos_logo_mark">®</string>
    <string name="dolby_atmos_mark_logo">Dolby Atmos®</string>
    <string name="tooltip_eq_title">Intelligent Equalizer/Graphic Equalizer</string>
    <string name="tooltip_eq_text">The Intelligent Equalizer analyzes and dynamically adjusts the audio to match a desired tone. Choose from the four presets shown, and then touch the Spectral Visualizer to make custom modifications to the Graphic Equalizer.</string>
    <string name="tooltip_sv_title">Surround Virtualizer</string>
    <string name="tooltip_sv_text">The Surround Virtualizer creates realistic surround sound from any set of headphones or stereo speakers. Set the switch on or off to control the surround sound effect.</string>
    <string name="tooltip_de_title">Dialogue Enhancer</string>
    <string name="tooltip_de_text">The Dialogue Enhancer improves the clarity of speech in any type of media. Set the switch on or off to control dialogue enhancement.</string>
    <string name="tooltip_vl_title">Volume Leveler</string>
    <string name="tooltip_vl_text">The Volume Leveler provides a consistent volume across all content and applications based on the master volume level of the device. Set the switch on or off to control automatic volume leveling.</string>
</resources>
