<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TextAppearanceMediumBlue" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/db36" android:layout_weight="1.0" />
    <TextView android:textAppearance="@style/TextAppearanceMediumBlue" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/db24" android:layout_weight="1.0" />
    <TextView android:textAppearance="@style/TextAppearanceMediumBlue" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/db12" android:layout_weight="1.0" />
    <TextView android:textAppearance="@style/TextAppearanceMediumBlue" android:layout_gravity="bottom" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/db0" android:layout_weight="1.0" />
    <TextView android:textAppearance="@style/TextAppearanceMediumBlue" android:layout_gravity="center_vertical" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dbn12" />
</LinearLayout>